all features working well, some conditions are throwing exceptions, needs handling

--- a/HW_3/banking_system/src/main/resources/application.properties
+++ b/HW_3/banking_system/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-file.separator=,
+field.separator=,
+log.separator=#
+log.path=src/main/resources/logs/logs.txt
+api.currency.url=https://api.apilayer.com/exchangerates_data/convert?to=%s&from=%s&amount=%f
+api.currency.key=ikSfnf1JRPEL9Vz5nvqoUCYEZWvrS2Fk
+file.repositoryBasePath=src/main/resources/accounts
+kafka.address=127.0.0.1:29092
+currencies=Dolar,TL,Alt\u0131n
